# breslin-salesloft-eval

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  sample.env
backend/: services.py  settings.py  tests.py  urls.py  views.py
backend/tests/: mocks.py  test_api.py  test_services.py
public/: index.html
src/: AllPeople.js  App.css  App.js  App.test.js  CharCounts.js  DuplicatePeople.js  EnterpriseReady.js
